# Lote2

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Lote2.sln  cmake_install.cmake  hello.lote
Lote2/: CFunction.cpp  CFunction.h  Exception.h  Function.cpp  Function.h  Lote2.vcxproj  Lote2.vcxproj.filters  Module.cpp  Module.h  Object.cpp  Object.h  Operator.cpp  Operator.h  Pointer.h  Runtime.cpp  Runtime.h  Scope.cpp  Scope.h  Stack.h  Utils.cpp  Utils.h  main.cpp
src/: Runtime.h  main.cpp
src/Exceptions/: Exception.h
src/Lib/: Utils.cpp  Utils.h
src/Lib/Stack/: Stack.h
src/Object/: Object.cpp  Object.h
src/Object/Function/: CFunction.cpp  CFunction.h  Function.cpp  Function.h
src/Object/Pointer/: Pointer.h
src/Operator/: Operator.cpp
src/Scope/: Module.cpp  Module.h  Scope.cpp  Scope.h
